Add precision: with Fetch

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
   <section class="section">
     <div class="container">
       <h1 class="title">Ajax examples</h1>
-      <h2 class="subtitle">#1 - Get additional HTML content</h2>
+      <h2 class="subtitle">#1 - Get additional HTML content with Fetch</h2>
 
       <div class="content">
         <p>This <code>div</code> is part of the initial page. <strong>More content will be shown in a few seconds.</strong></p>
