--- a/json-fetch/index.html
+++ b/json-fetch/index.html
@@ -43,26 +43,19 @@
       const url = `https://api.github.com/users/${username}`;
       fetch(url)
         .then(response => response.json()) // We now use response.json() instead of response.text()
-        .then(githubProfile => {
-          console.log('data decoded from JSON:', githubProfile);
-
-          // Extract the name and profile picture's URL
-          const name = githubProfile.name;
-          const avatarUrl = githubProfile.avatar_url;
+        .then(profile => {
+          console.log('data decoded from JSON:', profile);
 
           // Build a block of HTML
           const profileHtml = `
-            <p><strong>${name}</strong></p>
-            <img src="${avatarUrl}" alt="${name}" />
+            <p><strong>${profile.name}</strong></p>
+            <img src="${profile.avatar_url}" />
           `;
-
           document.querySelector('#github-profile').innerHTML = profileHtml;
         });
     }
 
-    // setTimeout allows us to call the above function after a preset delay ("timeout")
-    // specified in milliseconds
-    setTimeout(fetchGitHubProfileJSON, 3000);
+    fetchGitHubProfileJSON();
 
   </script>
 </body>
