--- a/json-fetch/index.html
+++ b/json-fetch/index.html
@@ -12,6 +12,10 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
     integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <style>
+    .navbar {
+      margin-bottom: 2em;
+    }
+
     #github-profile {
       margin-top: 3em;
     }
@@ -21,6 +25,22 @@
 <body>
   <section class="section">
     <div class="container">
+      <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div id="navbarBasicExample" class="navbar-menu">
+          <a class="navbar-item" href="../html/">
+            #1 HTML/Fetch
+          </a>
+
+          <a class="navbar-item">
+            #2 JSON/Fetch
+          </a>
+
+          <a class="navbar-item" href="../json-axios/">
+            #3 JSON/axios
+          </a>
+
+        </div>
+      </nav>
       <h1 class="title">Ajax examples</h1>
       <h2 class="subtitle">#2 - Get JSON data with Fetch</h2>
 
