Change title and div id according to the new theme
(changed API in the quest's challenge, from Chuck Norris jokes to Simpsons Quotes)

--- a/challenge-template/index.html
+++ b/challenge-template/index.html
@@ -18,10 +18,10 @@
 <body>
   <section class="section">
     <div class="container">
-      <h1 class="title">Chuck Norris Jokes</h1>
-      <p>Reload for another joke!</p>
+      <h1 class="title">Simpsons Quotes</h1>
+      <p>Reload for another quote!</p>
 
-      <div class="content" id="chuck-norris">
+      <div class="content" id="quotes">
       </div>
     </div>
 
