change to simpson

--- a/challenge-template/index.html
+++ b/challenge-template/index.html
@@ -29,10 +29,9 @@
 	<body>
 		<section class="section">
 			<div class="container">
-				<h1 class="title">Chuck Norris Jokes</h1>
-				<p>Reload for another joke!</p>
+				<h1 class="title">Simpson API</h1>
 
-				<div class="content" id="chuck-norris"></div>
+				<div class="content" id="simpson"></div>
 			</div>
 		</section>
 
